testsuite/tests/typecheck/should_fail/T10495.stderr

T10495.hs:5:1: error:
    • Couldn't match representation of type ‘a0’ with that of ‘b0’
        arising from a use of ‘coerce’
    • When instantiating ‘foo’, initially inferred to have
      this overly-general type:
        forall a b. Coercible a b => a -> b
      NB: This instantiation can be caused by the monomorphism restriction.
